syntax ="proto3";

package calculator;


option go_package="MyCal/calculator/proto";



message divRequest{
    int64 number1 =1;
    int64 number2 =2;
}

message divResponse{
      int64 Quotient  =1;
      int64 Reminder =2;

}